# beautify-files

./: .gitignore  .timestamps.json  README.md  ___start.txt  __package_tree.txt  __tree.txt  _basedpyright.py  _mypy.py  pyproject.toml  requirements.txt
.type-check-result/: mypy-src.txt  pyright-src.txt
src/: beautify.py  main.py  rekursion.py
src/utils/: file.py  trace.py  util.py
