[project]
name = "beautify-files"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name="Jürgen Schoenemeyer", email="js007@web.de" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cssbeautifier>=1.15.1",
    "jsbeautifier>=1.15.1",
    "lxml>=5.3.0",
]
