[project]
name = "beautify-files"
version = "0.1.0"
description = "..."
authors = [
  { name="Jürgen Schoenemeyer", email="js007@web.de" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cssbeautifier>=1.15.1",
    "jsbeautifier>=1.15.1",
    "lxml>=5.3.0",
]
[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "lxml-stubs>=0.5.1",
    "types-python-dateutil>=2.9.0.20241206",
]

[tool.basedpyright]
deprecateTypingAliases =  false
reportAny = false
reportImplicitRelativeImport = false
reportUnusedCallResult = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportExplicitAny = false

